@@ -1,3 +1,14 @@
+=== HEAD
+
+1 minor feature:
+
+  Return valid Rack responses (passes Lint) from status
+  server.
+
+1 new contributer:
+
+  * Jesse Cooke
+
 === 1.2.2 / 2012-04-28
 
 * 4 bug fixes:
